syntax = "proto3";

package usermgmt;

option go_package = "github.com/dhruvit2/usermgmt/usermgmt";

service UserManagement {
	rpc CreateNewUser(NewUser) returns (User) {}
	// server streaming
	rpc GreetUser(NewUser) returns (stream GreetManyTimesResponse) {}
	// bi-directional streaming
	rpc CreateMultipleUser(stream NewUser) returns (stream GreetManyTimesResponse) {}
}

message GreetManyTimesResponse {
    string result = 1;
}

message NewUser {
	string Name = 1;
	int32  Age = 2; 
}

message User {
	string Name = 1;
	int32 Age = 2;
	int32 Id = 3;
}
